test/pass/parse_expr_tuple.ms
const empty := ();
const single := (1,);
const pair := (1, 2);
