test/fail/parse_fn_args_missing_comma.ms
val result := add(1 2);
